✨ Add wallet component and manage routing

--- a/src/app/sidebar/sidebar-item/sidebar-item.component.html
+++ b/src/app/sidebar/sidebar-item/sidebar-item.component.html
@@ -1,4 +1,5 @@
-<div [ngClass]="isActive() ? 'is-active' : ''" class="sidebar-item-container">
+<div (click)="onClick.emit(item())" [id]="item().id + '-sidebar-item'" [ngClass]="isActive() ? 'is-active' : ''"
+     class="sidebar-item-container">
   <i [ngClass]="item().icon" class="sidebar-item-icon"></i>
   <span class="sidebar-item-label">{{ item().label }}</span>
 </div>
