--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,6 +1,7 @@
 .sidebar-items-container {
-  border-right: 1px solid var(--aef-neutral-light5);
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
   height: -webkit-fill-available;
-  margin: 16px 0;
   padding: 16px;
 }
