✨ Add eslint and fix some bug

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="sidebar-items-container">
   @for (item of model; track item.id; let i = $index) {
-    <aef-sidebar-item [index]="i" [item]="item" (onClick)="onMenuItemClick($event)" />
+    <aef-sidebar-item [index]="i" [item]="item" (clickOnMenuItem)="onMenuItemClick($event)" />
   }
 </div>
