--- a/src/app/sidebar/sidebar-item/sidebar-item.component.html
+++ b/src/app/sidebar/sidebar-item/sidebar-item.component.html
@@ -1,4 +1,4 @@
-<div (click)="onClick.emit(item())" [id]="item().id + '-sidebar-item'" [ngClass]="isActive() ? 'is-active' : ''"
+<div (click)="clickOnMenuItem.emit(item())" [id]="item().id + '-sidebar-item'" [ngClass]="isActive() ? 'is-active' : ''"
      class="sidebar-item-container">
   <i [ngClass]="item().icon" class="sidebar-item-icon"></i>
   <span class="sidebar-item-label">{{ item().label }}</span>
