✨ Add cards slider component and style for the single card

--- a/src/app/components/wallet/wallet.component.html
+++ b/src/app/components/wallet/wallet.component.html
@@ -1,3 +1,4 @@
+<aef-cards-slider />
 <h2>Le tue transazioni</h2>
 <div class="transactions-container">
   @for (transaction of transactions(); track transaction.id) {
