✨ Show different translations in base of card selected

--- a/src/app/components/cards-slider/card/card.component.html
+++ b/src/app/components/cards-slider/card/card.component.html
@@ -2,15 +2,16 @@
   <div class="card">
     <div class="card-inner">
       <div class="front">
-
+        <div class="row">
+          <img alt="Aether fintech logo" src="https://i.ibb.co/G9pDnYJ/chip.png" width="60px">
+        </div>
         <div class="row card-no">
-
-          @for (number of cardNumberSplitted(); track number) {
+          @for (number of cardNumberSplit(); track number) {
             <p>{{ number }}</p>
           }
         </div>
         <div class="row card-holder">
-          <p>CARD HPLDER</p>
+          <p>Intestatario</p>
           <p>Validità</p>
         </div>
         <div class="row name">
