--- a/src/app/components/cards-slider/cards-slider.component.html
+++ b/src/app/components/cards-slider/cards-slider.component.html
@@ -1,4 +1,4 @@
-<p-carousel [circular]="true" [numScroll]="1" [numVisible]="2" [value]="cards()">
+<p-carousel (onPage)="onPageChanged($event)" [circular]="true" [numScroll]="1" [numVisible]="1" [value]="cards()">
   <ng-template let-card pTemplate="item">
     <aef-card [card]="card" />
   </ng-template>
