--- a/src/app/components/wallet/wallet.component.html
+++ b/src/app/components/wallet/wallet.component.html
@@ -1,4 +1,4 @@
-<aef-cards-slider />
+<aef-cards-slider (cardSelectedChange)="changeCardSelected($event)" />
 <h2>Le tue transazioni</h2>
 <div class="transactions-container">
   @for (transaction of transactions(); track transaction.id) {
