--- a/src/app/components/transaction/transaction.component.html
+++ b/src/app/components/transaction/transaction.component.html
@@ -1,18 +1,15 @@
 <div class="transaction-container">
   <div class="transaction">
-    <div class="transaction-info">
-      <div class="transaction-description">
-        {{ transaction().description }}
-      </div>
-      <div class="transaction-type">
-        <span class="transaction-type-{{ transaction().type }}">{{ transaction().type }}</span>
-      </div>
-      <div class="transaction-date">
-        {{ transaction().date }}
-      </div>
+    <div class="transaction-description">
+      {{ transaction().description }}
     </div>
-    <div class="transaction-amount">
-      {{ transaction().amount }} €
+    <div class="transaction-detail">
+      <div class="transaction-date">
+        {{ transaction().date | date: 'medium': 'UTC': 'it' }}
+      </div>
+      <div class="transaction-amount transaction-type-{{ transaction().type }}">
+        {{ transaction().amount }} €
+      </div>
     </div>
   </div>
 </div>
