--- a/src/app/components/wallet/wallet.component.html
+++ b/src/app/components/wallet/wallet.component.html
@@ -1,7 +1,9 @@
-<aef-cards-slider (cardSelectedChange)="changeCardSelected($event)" />
-<h2>Le tue transazioni</h2>
-<div class="transactions-container">
-  @for (transaction of transactions(); track transaction.id) {
-    <aef-transaction [transaction]="transaction" />
-  }
+<div class="container">
+  <aef-cards-slider (cardSelectedChange)="changeCardSelected($event)" />
+  <h2 class="title">Le tue transazioni</h2>
+  <div class="transactions-container">
+    @for (transaction of transactions(); track transaction.id) {
+      <aef-transaction [transaction]="transaction" />
+    }
+  </div>
 </div>
