✨🚚 Move wallet component to card component and add operations component

--- a/src/app/components/cards/cards-slider/card/card.component.html
+++ b/src/app/components/cards/cards-slider/card/card.component.html
@@ -6,7 +6,7 @@
           <img alt="Aether fintech logo" src="https://i.ibb.co/G9pDnYJ/chip.png" width="60px">
         </div>
         <div class="row card-no">
-          @for (number of cardNumberSplit(); track number) {
+          @for (number of cardNumberSplit(); track $index; ) {
             <p>{{ number }}</p>
           }
         </div>
