--- a/src/app/components/cards/transaction/transaction.component.html
+++ b/src/app/components/cards/transaction/transaction.component.html
@@ -1,4 +1,4 @@
-<div class="transaction-container">
+<div [id]="transaction().id" class="transaction-container">
   <div class="transaction">
     <div class="transaction-description">
       {{ transaction().description }}
