--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,8 +1,52 @@
+.login-body {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  overflow-y: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #dde5f4;
+  height: 100vh;
+}
+
 .login-container {
+  background: #f1f7fe;
+  padding: 2em;
   display: flex;
   flex-direction: column;
+  border-radius: 30px;
+  box-shadow: 0 0 2em #e6e9f9;
+  gap: 2em;
+}
+
+.logo {
+  padding: 2em;
+
+  & > img {
+    width: 250px;
+  }
+}
+
+.login-container .input-container {
+  background: white;
+  box-shadow: 0 0 2em #e6e9f9;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  border-radius: 20px;
+  color: #4d4d4d;
+}
+
+.login-container .input-container input {
+  outline: none;
+  border: none;
+}
+
+.button-container {
+  display: flex;
   justify-content: center;
-  margin: auto;
-  gap: 2rem;
-  width: 50%;
+  width: 100%;
 }
