--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="input-container">
         <aef-input-label inputId="password" label="Password">
-          <input formControlName="password" id="password" pInputText type="password" />
+          <p-password [feedback]="false" [toggleMask]="true" formControlName="password" id="password" />
         </aef-input-label>
       </div>
       <div class="button-container">
