--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="aef-container">
-    <div class="aef-sidebar-container">
-      <aef-sidebar />
+    <div class="aef-topbar-container">
+      <aef-topbar />
     </div>
     <div class="aef-content-container">
       <router-outlet></router-outlet>
