--- a/src/app/components/operations/new-operation/bank-transfer/bank-transfer.component.html
+++ b/src/app/components/operations/new-operation/bank-transfer/bank-transfer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="first-line">
       <aef-input-label inputId="card" label="Seleziona una carta">
-        <p-select [options]="cards()" formControlName="card" id="card" optionLabel="description" />
+        <p-select [options]="bankAccounts()" formControlName="bankAccount" id="card" optionLabel="description" />
       </aef-input-label>
       <aef-input-label inputId="beneficiary" label="Beneficiario">
         <p-inputgroup>
