--- a/src/app/components/bank-account/bank-account.component.html
+++ b/src/app/components/bank-account/bank-account.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <aef-bank-accounts-slider (bankAccountSelectedChange)="changeBankAccountSelected($event)" />
-  <h2 class="title">Le tue carte</h2>
+  <h2 class="title">Carte collegate al conto</h2>
   <div class="cards-container">
     @for (card of cards(); track card.id) {
       <aef-card [card]="card" />
