--- a/src/app/components/operations/new-operation/bank-transfer/bank-transfer.component.css
+++ b/src/app/components/operations/new-operation/bank-transfer/bank-transfer.component.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  max-width: 100%;
 }
 
 .second-line {
@@ -22,4 +23,10 @@
   & > * {
     flex: 1;
   }
+}
+
+.bank-account-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
