--- a/src/app/components/operations/new-operation/internal-transfer/internal-transfer.component.html
+++ b/src/app/components/operations/new-operation/internal-transfer/internal-transfer.component.html
@@ -1,1 +1,61 @@
-<p>internal-transfer works!</p>
+<form (ngSubmit)="onSubmit()" [formGroup]="internalTransferForm">
+  <div class="container">
+    <div class="first-line">
+      <aef-input-label inputId="originBankAccount" label="Seleziona il conto corrente di origine">
+        <p-select [options]="bankAccounts()" formControlName="originBankAccount" id="originBankAccount"
+                  optionLabel="name">
+          <ng-template let-bankAccount pTemplate="item">
+            <div class="bank-account-container">
+              <div class="bank-account-text">
+                {{ bankAccount.name }}
+              </div>
+              <div class="bank-account-balance">
+                Disponibilità: {{ bankAccount.balance | currency: 'EUR' }}
+              </div>
+            </div>
+          </ng-template>
+        </p-select>
+      </aef-input-label>
+      <aef-input-label inputId="destinationBankAccount" label="Seleziona il conto corrente di destinazione">
+        <p-select [options]="bankAccounts()" formControlName="destinationBankAccount" id="destinationBankAccount"
+                  optionLabel="name">
+          <ng-template let-bankAccount pTemplate="item">
+            <div class="bank-account-container">
+              <div class="bank-account-text">
+                {{ bankAccount.name }}
+              </div>
+              <div class="bank-account-balance">
+                Disponibilità: {{ bankAccount.balance | currency: 'EUR' }}
+              </div>
+            </div>
+          </ng-template>
+        </p-select>
+      </aef-input-label>
+    </div>
+    <div class="second-line">
+      <div class="description-container">
+        <aef-input-label inputId="description" label="Causale">
+          <textarea formControlName="description" id="description" pTextarea rows="2"></textarea>
+        </aef-input-label>
+      </div>
+      <div class="amount-container">
+        <aef-input-label inputId="amount" label="Importo">
+          <p-inputNumber currency="EUR" formControlName="amount" inputId="amount" locale="it-IT"
+                         mode="currency"></p-inputNumber>
+        </aef-input-label>
+      </div>
+    </div>
+    <div class="button-container">
+      <p-button [disabled]="!internalTransferForm.valid" severity="primary" type="submit">Inserisci giroconto</p-button>
+    </div>
+  </div>
+</form>
+
+<p-dialog [(visible)]="dialogVisible" [modal]="true" [style]="{ width: '25rem' }"
+          header="Giroconto inserito con successo!">
+  <span class="p-text-secondary block mb-8">Vuoi inserire un nuovo giroconto o tornare alla schermata dell'elenco delle operazioni?</span>
+  <div class="flex justify-end gap-2">
+    <p-button (click)="goToOperationList()" label="Lista operazioni" severity="secondary" />
+    <p-button (click)="newOperation()" label="Nuovo giroconto" />
+  </div>
+</p-dialog>
