--- a/src/app/components/topbar/topbar.component.css
+++ b/src/app/components/topbar/topbar.component.css
@@ -29,3 +29,15 @@
 .logo img {
   height: 60px;
 }
+
+.user-container {
+  align-items: center;
+  display: flex;
+  gap: 8px;
+  padding: 12px;
+}
+
+.user-text {
+  display: flex;
+  gap: 2px;
+}
