--- a/src/app/components/topbar/topbar-item/topbar-item.component.css
+++ b/src/app/components/topbar/topbar-item/topbar-item.component.css
@@ -6,7 +6,7 @@
   gap: 8px;
   padding: 8px;
 
-  &.is-active {
+  &.active {
     font-weight: bolder;
   }
 
@@ -18,4 +18,8 @@
 
 .topbar-item {
   padding: 16px;
+}
+
+.pi {
+  font-weight: inherit;
 }
