♿️ Fix some accessibility

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="input-container">
         <aef-input-label inputId="username" label="Username">
-          <input formControlName="username" id="username" pInputText />
+          <input [pAutoFocus]="true" formControlName="username" id="username" pInputText />
         </aef-input-label>
       </div>
       <div class="input-container">
